general house keeping to ensure layout on all pages looks better by adding padding and margins to text to speerate elements. tweaked header size so the hvr sweep didnt overlap the main section on every page, moved the form section to the middle of the page and amended columns to ensure it was more central

--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -40,7 +40,6 @@
     background-color: #FAF8AA;
 }
 
-
 .wrapperAbout {
      background-color: #FAF8AA;
 
@@ -63,13 +62,13 @@
 
 .hvr-sweep-to-bottom:before {
     background: #F7E431;
-    height: 100%;
+    height: 120px;
 }
 
 /*------------------------------------header*/
 
-.header {
-    min-height: 100%;
+.title{
+    margin-top: 15px;
 }
 
 
@@ -86,6 +85,7 @@ header {
 
 }
 
+
 #nav {
     margin: 0;
 }
@@ -95,7 +95,7 @@ header {
 }
 
 .menuitem {
-    height: 100px;
+    height: 100%;
     text-align: center;
     padding: 0;
 }
@@ -104,7 +104,7 @@ header {
     width: 100%;
     text-decoration: none;
     color: #ffffff;
-    height: 100%;
+    height: 120px;
 }
 
 .menuitem a i {
@@ -129,22 +129,23 @@ header {
     display: inline-block;
 }
 
+
 .bg-color-title {
-    padding: 95px;
+    padding: 100px;
 }
 
 .bg-color-about {
-    padding: 95px;
+    padding: 100px;
 
 }
 
 .bg-color-media {
-    padding: 95px;
+    padding: 100px;
 
 }
 
 .bg-color-contact {
-    padding: 95px;
+    padding: 100px;
 
 }
 
@@ -193,17 +194,16 @@ header {
 
 form{
 
-
 text-align: center;
     
 }
 
-.form-group{
-    padding-left: 40px;
-    padding-right: 40px;
-
+.title{
+    margin-top: 15px;
 }
-
+.btn {
+    margin-bottom: 15px;
+}
 .contact-text{
     text-align: center;
     padding-top: 25px;
